@@ -1,3 +1,8 @@
+Tue Mar  7 17:09:07 2006  Tim Janik  <timj@gtk.org>
+
+	* gobject.c (g_object_compat_control): added case3 to hand out the
+	original floating flag handler. required by gtk+ >= 2.10.
+
 2006-02-24  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.10.0 ===
